--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^24.0.13",
     "@vitest/ui": "^3.2.4",
     "dotenv": "^17.2.0",
+    "eventsource": "^4.0.0",
     "rollup": "^4.9.6",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
