--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -45,8 +45,13 @@ jobs:
     - name: Update package.json version
       run: |
         VERSION="${{ steps.version.outputs.version }}"
-        npm version $VERSION --no-git-tag-version
-        echo "Updated package.json to version $VERSION"
+        CURRENT_VERSION=$(node -p "require('./package.json').version")
+        if [ "$CURRENT_VERSION" != "$VERSION" ]; then
+          npm version $VERSION --no-git-tag-version
+          echo "Updated package.json to version $VERSION"
+        else
+          echo "package.json already at version $VERSION"
+        fi
         
     - name: Install dependencies
       run: npm ci
