--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -56,8 +56,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run tests
-      run: npm run test:run
+    - name: Run unit tests only (skip integration tests)
+      run: npm run test -- --exclude **/*.integration.test.ts
       
     - name: Build package
       run: npm run build
