--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -57,8 +57,8 @@ jobs:
       run: npm ci
       
     - name: Run unit tests only (skip integration tests)
-      run: npm run test -- --exclude **/*.integration.test.ts
-      
+      run: npx vitest run "**/!(*.integration).test.ts"
+
     - name: Build package
       run: npm run build
       
