--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -56,8 +56,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run unit tests only (skip integration tests)
-      run: npx vitest run "**/!(*.integration).test.ts"
+    - name: Run unit tests only (AuthMethodsConsistency)
+      run: npx vitest run test/AuthMethodsConsistency.test.ts
 
     - name: Build package
       run: npm run build
